--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
       // Redirect to home.html on successful login
       alert("Login successful!");
-      window.location.href = "home.html"; 
+      window.location.href = "HOME.html"; 
       return false; 
     }
   </script>
